2022/07/22    Nakata Maho <maho@riken.jp> 2.0 branch
            * Fix iMparam2stage.
            * Fix issues for test programs; stack overflows, possible memory leaks and memory accesses.
            * Extensive tests and fixes for mingw64; we provide DLLs for libqd and mpblas.
            * Correct exponent ranges for GMP, MPFR and each OS.
            * Update test results for aarch64-unknown-linux-gnu, x86_64-apple-darwin20.6.0,
              x86_64-pc-linux-gnu, x86_64-pc-linux-gnu_inteloneapi and x86_64-w64-mingw32.

2022/06/21    Nakata Maho <maho@riken.jp> 2.0 branch
            * Enable Rgejsv, Cgejsv, Rgesvj and Cgesvj for dd/qd by changing Rlamch("O") to approx.
              1e-16 * Rlamch("O").

2022/06/14    Nakata Maho <maho@riken.jp> 2.0.0 alpha
            * support all complex routines for all precisions except for the mixed-precision version.
            * support all Rectangular Full Packed (RFP) routines
            * on macOS, dylibs are now correctly linked
            * on Linux, we set absolute rpath so that mp libraries are correctly linked.
            * remove debugging symbols by default
            * improvements in the installation process
            * overflow bug in sqrt is fixed for libqd

2022/05/25    Nakata Maho <maho@riken.jp> 2.0 branch
            * 2.0.0 alpha.

2022/05/16    Nakata Maho <maho@riken.jp> 2.0 branch
            * Disable Rgejsv, Cgejsv, Rgesvj and Cgesvj by dd/qd, since we cannot
              gurantee the precisions.

2022/05/16    Nakata Maho <maho@riken.jp> 2.0 branch
            * Rtest_rfp.in, Ctest_rfp.in: Test for linear equation routines RFP format
              have passed for all precisions.

2022/05/10    Nakata Maho <maho@riken.jp> 2.0 branch
            * csd.in: Test for CS decomposition routines
              have passed for all precisions (except for GMP; it doesn't support csd).

2022/05/09    Nakata Maho <maho@riken.jp> 2.0 branch
            * gsv.in: Test for Generalized SVD routines