@@ -405,7 +405,11 @@ void Cgejsv(const char *joba, const char *jobu, const char *jobv, const char *jo
     //
     epsln = Rlamch("Epsilon");
     sfmin = Rlamch("SafeMinimum");
-    big = Rlamch("Overflow");
+#if defined ___MPLAPACK_BUILD_WITH_DD___ || defined ___MPLAPACK_BUILD_WITH_QD___
+    big = one / sfmin;
+#else
+     big = Rlamch("Overflow");
+#endif
     small = sfmin / epsln;
     //     BIG   = ONE / SFMIN
     //
