@@ -177,7 +177,11 @@ void Cgesvj(const char *joba, const char *jobu, const char *jobv, INTEGER const 
     sfmin = Rlamch("SafeMinimum");
     rootsfmin = sqrt(sfmin);
     small = sfmin / epsln;
-    big = Rlamch("Overflow");
+#if defined ___MPLAPACK_BUILD_WITH_DD___ || defined ___MPLAPACK_BUILD_WITH_QD___
+    big = one / sfmin;
+#else
+     big = Rlamch("Overflow");
+#endif
     //     BIG         = ONE    / SFMIN
     rootbig = one / rootsfmin;
     //      LARGE = BIG / SQRT( DBLE( M*N ) )
