@@ -150,7 +150,11 @@ void Rgejsv(const char *joba, const char *jobu, const char *jobv, const char *jo
     epsln = Rlamch("Epsilon");
     sfmin = Rlamch("SafeMinimum");
     small = sfmin / epsln;
+#if defined ___MPLAPACK_BUILD_WITH_DD___ || defined ___MPLAPACK_BUILD_WITH_QD___
+    big = one / sfmin;
+#else
     big = Rlamch("Overflow");
+#endif
     //     BIG   = ONE / SFMIN
     //
     //     Initialize SVA(1:N) = diag( ||A e_i||_2 )_1^N
