@@ -166,7 +166,11 @@ void Rgesvj(const char *joba, const char *jobu, const char *jobv, INTEGER const 
     sfmin = Rlamch("SafeMinimum");
     rootsfmin = sqrt(sfmin);
     small = sfmin / epsln;
+#if defined ___MPLAPACK_BUILD_WITH_DD___ || defined ___MPLAPACK_BUILD_WITH_QD___
+    big = one / sfmin;
+#else
     big = Rlamch("Overflow");
+#endif
     //     BIG         = ONE    / SFMIN
     rootbig = one / rootsfmin;
     bigtheta = one / rooteps;
